--- a/project/styles/styles.css
+++ b/project/styles/styles.css
@@ -1,4 +1,26 @@
-
+h1 {
+    margin: 0;
+    padding: 40px 0 0 40px;
+}
+.showcard {
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    margin: 0;
+    /*grid-template-rows: repeat(6, 100px);*/
+    
+}
+.showcard h2 {
+    margin: 0;
+    text-align: start;
+}
+.synopsis {
+    margin-top: 20px;
+}
+.posterImage {
+    width: fit-content;
+    height: fit-content;
+    float: left;
+}
 #myBtn {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
